# neelvad_firefly

./: .gitignore  AGENTS.md  README.md  action.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  firefly-demo.yml  gpu-smoke.yml  release.yml
docs/: _config.yml  gemma4-day-one.md  index.md  quant-recipe.md  writeup-draft.md
examples/per_head_demo/: README.md  make_broken_head.py  run_demo.sh
examples/quantization_demo/: README.md  make_broken.py  run_demo.sh
examples/quantization_demo/_artifacts/: golden.json
examples/quantization_demo/_artifacts/reference/: manifest.json  tolerances.json
experiments/: README.md  analyze.py  analyze_qwen_layer27.py  debug_gemma4_perplexity.py  debug_gemma4_perplexity2.py  debug_gemma4_qat.py  debug_int4_recovery.py  debug_smoothquant_export.py  harden_backend_transfer.py  probe_int4_torchao.py  probe_ranking_scale.py  recsys_precision_fragility.py  repro_flashinfer_zero_heads.py  sanity_mistral_int4.py  spike_torch_dispatch.py  validate_ranking_transfer.py  vllm_explore.py
scripts/: README.md  analyze.py  analyze_qwen_layer27.py  capture_vllm.py  compare_per_head.py  debug_int4_recovery.py  debug_smoothquant_export.py  demo_auto_quant.py  demo_dense_sweep.py  demo_llm_agent.py  demo_quant_real_model.py  demo_quant_recipe.py  demo_w8a8_recovery_sweep.py  gpu_smoke.py  harden_backend_transfer.py  integration_shadow_cuda_graph.py  make_chat_eval.py  modal_validation.py  plot_validation.py  probe_int4_torchao.py  probe_ranking_scale.py  recsys_precision_fragility.py  repro_flashinfer_zero_heads.py  run_vllm_suite.py  sanity_mistral_int4.py  spike_cuda_graph.py  spike_torch_compile.py  spike_torch_dispatch.py  validate_awq_gpu.py  validate_benchmark.py  validate_deploy.py  validate_gemma4_optimize.py  validate_gemma4_parity.py  validate_gemma4_quant.py  validate_gemma4_vllm_eval.py  validate_int4_gpu.py  validate_multi_scheme.py  validate_optimize.py  validate_quant_recipe_gpu.py  validate_quant_risk.py  (+10 more)
scripts/prompts/: chat_eval_dolly.json  long_1k.txt  long_270.txt  long_2k.txt  long_4k.txt
src/firefly/: __init__.py  attribution.py  calibrate.py  capture.py  cli.py  compare.py  determinism.py  head_attribution.py  noise.py  op_drill.py  quant_sensitivity.py  quant_validate.py  reference.py  report.py  shadow.py  storage.py  tap_points.py
src/firefly/bench/: __init__.py  base.py  sglang.py  vllm.py
src/firefly/cli/: __init__.py  __main__.py  _app.py  drill.py  parity.py  quant.py
src/firefly/quant/: __init__.py  auto.py  awq.py  bar.py  cost.py  deploy.py  diagnose.py  evaluate.py  intervention.py  llm.py  optimize.py  recipe.py  recipe_io.py  risk.py  route.py  salience.py  search.py  sensitivity.py  smoothquant.py  step.py  torchao.py
src/firefly/runners/: __init__.py  _common.py  _sglang_hooks.py  base.py  hf.py  sglang.py  vllm.py
src/firefly/shadow/: __init__.py  aggregate.py  buffer.py  eager.py  instrument.py  ops.py  sinks.py  static.py  triton_stats.py
tests/: test_attribution.py  test_bench.py  test_calibrate.py  test_capture.py  test_compare.py  test_determinism.py  test_head_attribution.py  test_noise.py  test_op_drill.py  test_quant_auto.py  test_quant_awq.py  test_quant_cost.py  test_quant_deploy.py  test_quant_diagnose.py  test_quant_diff.py  test_quant_evaluate.py  test_quant_intervention.py  test_quant_llm.py  test_quant_optimize.py  test_quant_recipe_io.py  test_quant_risk.py  test_quant_route.py  test_quant_salience.py  test_quant_search.py  test_quant_sensitivity.py  test_quant_smoothquant.py  test_quant_step.py  test_reference.py  test_report.py  test_runners.py  test_shadow.py  test_smoke.py  test_storage.py  test_tap_points.py  test_tolerances_io.py  test_torchao_validation.py
