[project]
name = "firefly"
version = "0.0.1"
description = "Numerical-parity CI gate for ML model deployments"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Neel Vadoothker" }]
dependencies = [
    "torch>=2.3",
    "transformers>=4.40",
    "safetensors>=0.4",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
firefly = "firefly.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firefly"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/firefly/cli.py" = ["B008"]  # typer.Option in defaults is idiomatic

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests that download models or otherwise take a long time (run with -m slow)",
]
addopts = "-m 'not slow'"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
